--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
                 <div id="start" >
                     <h1>Coding Quiz</h1>
-                    <p>This is a basic coding quiz to help you get some review. When you are ready, click "Start Quiz!"</p>
+                    <p>This is a basic coding quiz to help you get some review. You will have 75 seconds to complete the quiz; for each incorrect answer, 10 seconds will be detracted from your timer (and final score). Are you ready? When you are ready, click "Start Quiz!"</p>
                     <button type="button" class="btn btn-primary btnSpace" id="startBtn" onclick="startQuiz()">Start Quiz!</button>
                 </div>
                 
